fixed white colo not showing up

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,6 @@ li, a, span {
         gap: 0.6rem;
     }
         .nav-active {
-            color: var(--color-white);
             position: relative;
         }
         .nav-active::after {
@@ -118,6 +117,10 @@ li, a, span {
             width: 3px;
             background-color: var(--list-decoration-underline);
         }
+        .nav-active > .nav-item-link {
+            color: var(--color-white);
+        }
+
     .nav-list-icon {
         font-size: 1.5rem;
     }
@@ -160,6 +163,7 @@ li, a, span {
         font-weight: 600;
         border-bottom: 2px solid var(--nav-grey-not-selected);
         padding-bottom: 1rem;
+        cursor: pointer;
     }
         .app-download-icon {
             font-size: 1rem;
